# ai-agent-platform

./: .gitignore  clean_slate_dev.md  docker-compose.yml
backend_fastapi/: .dockerignore  .env  .env.example  .env.local  Dockerfile  alembic.ini  docker-entrypoint.sh  local-2026-06-27.jsonl  pyproject.toml
backend_fastapi/alembic/: env.py
backend_fastapi/alembic/versions/: 5d8668946cd3_add_oauth_tokens_to_auth_identities.py  65ab11bdd68b_init.py  81cd496c672f_block.py  a1b2c3d4e5f6_encrypted_oauth_token_columns.py  be1d5ce2fda8_added_changed_to_userenum.py  c43582891f92_chat.py  ca794c79f4ff_chat.py  ceb7277be20b_group.py  da6282ce1771_added_changed_to_userenum.py  e8f9a0b1c2d3_create_chat_tables.py  f1a2b3c4d5e6_message_block_payload.py  h3a4b5c6d7e8_message_block_position_unique.py  i4b5c6d7e8f9_create_user_groups.py  j5c6d7e8f9a0_create_agent_skills.py  k6d7e8f9a0b1_create_user_memories.py  l7e8f9a0b1c2_create_workflows.py  m8f9a0b1c2d3_create_user_connectors.py  n9a0b1c2d3e4_create_refresh_tokens.py  o0a1b2c3d4e5_create_user_subagents.py
backend_fastapi/app/: main.py
backend_fastapi/docs/: KEY_ROTATION.md  VERTEX_AI_SEARCH.md
backend_fastapi/logs/: local-2026-02-15.jsonl  local-2026-02-16.jsonl  local-2026-02-17.jsonl  local-2026-03-15.jsonl  local-2026-03-25.jsonl  local-2026-03-28.jsonl  local-2026-04-03.jsonl  prod-2026-04-16.jsonl  prod-2026-04-19.jsonl  prod-2026-05-01.jsonl
backend_fastapi/scripts/: cleanup_daytona_sandboxes.py  migrate_daytona_home_paths.py  run_code_review.py
backend_fastapi/secrets/: cm-sales-ai-agent-sa.json
(+287 files in other folders)
